[gd_scene load_steps=7 format=3 uid="uid://bsa5u4qnv0qry"]

[ext_resource type="Script" path="res://addons/controller_icons/objects/TextureRect.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dim5mk7g4q043" path="res://addons/controller_icons/assets/key/q.png" id="2"]
[ext_resource type="Texture2D" uid="uid://xe4n818le3p8" path="res://addons/controller_icons/assets/key/e.png" id="3"]
[ext_resource type="FontFile" path="res://resources/fonts/italic.tres" id="4"]
[ext_resource type="Script" path="res://scenes/SystemBar.gd" id="5"]
[ext_resource type="Script" path="res://addons/retrohub_theme_helper/ui/AccessibilityFocus.gd" id="6"]

[node name="SystemBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.75
offset_top = -0.200012
offset_bottom = -0.200012

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -26.5
offset_right = 74.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
text = "No systems available"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeLabel" type="Label" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.266667, 0.266667, 0.266667, 1)
theme_override_fonts/font = ExtResource("4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControllerIcons" type="Control" parent="ColorRect"]
unique_name_in_owner = true
modulate = Color(0.811765, 0.811765, 0.811765, 0.513726)
anchors_preset = 0
anchor_left = 0.029
anchor_top = 0.5
anchor_right = 0.971
anchor_bottom = 0.5
offset_left = 0.304001
offset_top = 0.200012
offset_right = -0.304077
offset_bottom = 0.200012

[node name="IconLeft" type="TextureRect" parent="ColorRect/ControllerIcons"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
texture = ExtResource("2")
expand_mode = 1
script = ExtResource("1")
path = "rh_left_shoulder"

[node name="IconRight" type="TextureRect" parent="ColorRect/ControllerIcons"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
texture = ExtResource("3")
expand_mode = 1
script = ExtResource("1")
path = "rh_right_shoulder"

[node name="AccessibilityFocus" type="Node" parent="."]
script = ExtResource("6")
